# openai-python

./: .env.example  .gitignore  README.md  pyproject.toml
src/: api.py  chat.py  config.py  main.py
tests/: test_api.py  tests.py
